--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.4",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
-    "hardhat": "^2.8.3"
+    "hardhat": "^2.8.3",
+    "web3": "^1.7.0"
   },
   "dependencies": {
-    "dotenv": "^16.0.0",
-    "web3": "^1.7.0"
+    "dotenv": "^16.0.0"
   }
 }
