--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "web3": "^1.7.0"
   },
   "dependencies": {
+    "axios": "^0.25.0",
+    "bn.js": "^4.12.0",
     "dotenv": "^16.0.0"
   }
 }
