--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
+    "bignumber.js": "^9.0.2",
     "bn.js": "^4.12.0",
     "dotenv": "^16.0.0"
   }
